4.0/_sources/lland.rst.txt
.. |A1| replace:: :class:`~hydpy.models.lland.lland_control.A1`
.. |A2| replace:: :class:`~hydpy.models.lland.lland_control.A2`
.. |ACKER| replace:: :const:`~hydpy.models.lland.lland_constants.ACKER`
.. |ASInz| replace:: :class:`~hydpy.models.lland.lland_states.ASInz`
.. |AbsFHRU| replace:: :class:`~hydpy.models.lland.lland_derived.AbsFHRU`
.. |ActualAlbedoInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.ActualAlbedoInz`
.. |ActualSurfaceResistance| replace:: :class:`~hydpy.models.lland.lland_fluxes.ActualSurfaceResistance`
.. |ActualVapourPressure| replace:: :class:`~hydpy.models.lland.lland_fluxes.ActualVapourPressure`
.. |AerodynamicResistance| replace:: :class:`~hydpy.models.lland.lland_fluxes.AerodynamicResistance`
.. |Albedo| replace:: :class:`~hydpy.models.lland.lland_control.Albedo`
.. |AngstromAlternative| replace:: :class:`~hydpy.models.lland.lland_control.AngstromAlternative`
.. |AngstromConstant| replace:: :class:`~hydpy.models.lland.lland_control.AngstromConstant`
.. |BAUMB| replace:: :const:`~hydpy.models.lland.lland_constants.BAUMB`
.. |BODEN| replace:: :const:`~hydpy.models.lland.lland_constants.BODEN`
.. |BSf| replace:: :class:`~hydpy.models.lland.lland_control.BSf`
.. |Beta| replace:: :class:`~hydpy.models.lland.lland_control.Beta`
.. |BoWa2Z| replace:: :class:`~hydpy.models.lland.lland_fixed.BoWa2Z`
.. |BoWa| replace:: :class:`~hydpy.models.lland.lland_states.BoWa`
.. |Calc_ActualAlbedo_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_ActualAlbedo_V1`
.. |Calc_ActualSurfaceResistance_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_ActualSurfaceResistance_V1`
.. |Calc_AdjustedGlobalRadiation_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_AdjustedGlobalRadiation_V1`
.. |Calc_DailyGlobalRadiation_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_DailyGlobalRadiation_V1`
.. |Calc_EarthSunDistance_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_EarthSunDistance_V1`
.. |Calc_EvB_V2| replace:: :class:`~hydpy.models.lland.lland_model.Calc_EvB_V2`
.. |Calc_EvI_Inzp_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_EvI_Inzp_V1`
.. |Calc_EvI_Inzp_V2| replace:: :class:`~hydpy.models.lland.lland_model.Calc_EvI_Inzp_V2`
.. |Calc_EvI_Inzp_V3| replace:: :class:`~hydpy.models.lland.lland_model.Calc_EvI_Inzp_V3`
.. |Calc_EvPo_V2| replace:: :class:`~hydpy.models.lland.lland_model.Calc_EvPo_V2`
.. |Calc_EvS_WAeS_WATS_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_EvS_WAeS_WATS_V1`
.. |Calc_G_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_G_V1`
.. |Calc_G_V2| replace:: :class:`~hydpy.models.lland.lland_model.Calc_G_V2`
.. |Calc_GlobalRadiation_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_GlobalRadiation_V1`
.. |Calc_LanduseSurfaceResistance_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_LanduseSurfaceResistance_V1`
.. |Calc_QAH_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_QAH_V1`
.. |Calc_QBGA_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_QBGA_V1`
.. |Calc_QIB1_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_QIB1_V1`
.. |Calc_ReducedWindSpeed2m_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_ReducedWindSpeed2m_V1`
.. |Calc_SP_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_SP_V1`
.. |Calc_SolarDeclination_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_SolarDeclination_V1`
.. |Calc_TempS_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_TempS_V1`
.. |Calc_WATS_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_WATS_V1`
.. |Calc_WG_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_WG_V1`
.. |Calc_WNied_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_WNied_V1`
.. |Calc_WaDa_WAeS_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_WaDa_WAeS_V1`
.. |Calc_WindSpeed10m_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_WindSpeed10m_V1`
.. |Calc_WindSpeed2m_V1| replace:: :class:`~hydpy.models.lland.lland_model.Calc_WindSpeed2m_V1`
.. |Complete| replace:: :class:`~hydpy.models.lland.lland_masks.Complete`
.. |DMax| replace:: :class:`~hydpy.models.lland.lland_control.DMax`
.. |DMin| replace:: :class:`~hydpy.models.lland.lland_control.DMin`
.. |DailyGlobalRadiation| replace:: :class:`~hydpy.models.lland.lland_fluxes.DailyGlobalRadiation`
.. |DailyNetRadiation| replace:: :class:`~hydpy.models.lland.lland_fluxes.DailyNetRadiation`
.. |DailyPossibleSunshineDuration| replace:: :class:`~hydpy.models.lland.lland_fluxes.DailyPossibleSunshineDuration`
.. |DailySunshineDuration| replace:: :class:`~hydpy.models.lland.lland_fluxes.DailySunshineDuration`
.. |EQB| replace:: :class:`~hydpy.models.lland.lland_control.EQB`
.. |EQD1| replace:: :class:`~hydpy.models.lland.lland_control.EQD1`
.. |EQD2| replace:: :class:`~hydpy.models.lland.lland_control.EQD2`
.. |EQI1| replace:: :class:`~hydpy.models.lland.lland_control.EQI1`
.. |EQI2| replace:: :class:`~hydpy.models.lland.lland_control.EQI2`
.. |ESnowInz| replace:: :class:`~hydpy.models.lland.lland_states.ESnowInz`
.. |ESnow| replace:: :class:`~hydpy.models.lland.lland_states.ESnow`
.. |ET0| replace:: :class:`~hydpy.models.lland.lland_fluxes.ET0`
.. |EvB| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvB`
.. |EvI| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvI`
.. |EvPo| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvPo`
.. |EvSInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvSInz`
.. |EvS| replace:: :class:`~hydpy.models.lland.lland_fluxes.EvS`
.. |FBeta| replace:: :class:`~hydpy.models.lland.lland_control.FBeta`
.. |FEUCHT| replace:: :const:`~hydpy.models.lland.lland_constants.FEUCHT`
.. |FHRU| replace:: :class:`~hydpy.models.lland.lland_control.FHRU`
.. |FK| replace:: :class:`~hydpy.models.lland.lland_control.FK`
.. |FLUSS| replace:: :const:`~hydpy.models.lland.lland_constants.FLUSS`
.. |FLn| replace:: :class:`~hydpy.models.lland.lland_control.FLn`
.. |FT| replace:: :class:`~hydpy.models.lland.lland_control.FT`
.. |FVF| replace:: :class:`~hydpy.models.lland.lland_control.FVF`
.. |False| replace:: :const:`False`
.. |Flux1DSequence| replace:: :class:`~hydpy.models.lland.lland_sequences.Flux1DSequence`
.. |Fr| replace:: :class:`~hydpy.models.lland.lland_derived.Fr`
.. |GLETS| replace:: :const:`~hydpy.models.lland.lland_constants.GLETS`
.. |GRUE_E| replace:: :const:`~hydpy.models.lland.lland_constants.GRUE_E`
.. |GRUE_I| replace:: :const:`~hydpy.models.lland.lland_constants.GRUE_I`
.. |GSBGrad1| replace:: :class:`~hydpy.models.lland.lland_control.GSBGrad1`
.. |GSBGrad2| replace:: :class:`~hydpy.models.lland.lland_control.GSBGrad2`
.. |Gefr| replace:: :class:`~hydpy.models.lland.lland_fluxes.Gefr`
.. |GlobalRadiation| replace:: :class:`~hydpy.models.lland.lland_fluxes.GlobalRadiation`
.. |G| replace:: :class:`~hydpy.models.lland.lland_fluxes.G`
.. |HInz| replace:: :class:`~hydpy.models.lland.lland_control.HInz`
.. |HeatOfFusion| replace:: :class:`~hydpy.models.lland.lland_derived.HeatOfFusion`
.. |Inzp| replace:: :class:`~hydpy.models.lland.lland_states.Inzp`
.. |KB| replace:: :class:`~hydpy.models.lland.lland_derived.KB`
.. |KD1| replace:: :class:`~hydpy.models.lland.lland_derived.KD1`
.. |KD2| replace:: :class:`~hydpy.models.lland.lland_derived.KD2`
.. |KE| replace:: :class:`~hydpy.models.lland.lland_control.KE`
.. |KG| replace:: :class:`~hydpy.models.lland.lland_control.KG`
.. |KI1| replace:: :class:`~hydpy.models.lland.lland_derived.KI1`
.. |KI2| replace:: :class:`~hydpy.models.lland.lland_derived.KI2`
.. |KInz| replace:: :class:`~hydpy.models.lland.lland_derived.KInz`
.. |KTSchnee| replace:: :class:`~hydpy.models.lland.lland_control.KTSchnee`
.. |KapGrenz| replace:: :class:`~hydpy.models.lland.lland_control.KapGrenz`
.. |LAI| replace:: :class:`~hydpy.models.lland.lland_control.LAI`
.. |LAUBW| replace:: :const:`~hydpy.models.lland.lland_constants.LAUBW`
.. |LWE| replace:: :class:`~hydpy.models.lland.lland_fixed.LWE`
.. |LanduseSurfaceResistance| replace:: :class:`~hydpy.models.lland.lland_fluxes.LanduseSurfaceResistance`
.. |Land| replace:: :class:`~hydpy.models.lland.lland_masks.Land`
.. |LatitudeRad| replace:: :class:`~hydpy.models.lland.lland_derived.LatitudeRad`
.. |Latitude| replace:: :class:`~hydpy.models.lland.lland_control.Latitude`
.. |Lnk| replace:: :class:`~hydpy.models.lland.lland_control.Lnk`
.. |LoggedGlobalRadiation| replace:: :class:`~hydpy.models.lland.lland_logs.LoggedGlobalRadiation`
.. |MISCHW| replace:: :const:`~hydpy.models.lland.lland_constants.MISCHW`
.. |MOY| replace:: :class:`~hydpy.models.lland.lland_derived.MOY`
.. |Model.idx_sim| replace:: :const:`~hydpy.core.modeltools.Model.idx_sim`
.. |NADELW| replace:: :const:`~hydpy.models.lland.lland_constants.NADELW`
.. |NBes| replace:: :class:`~hydpy.models.lland.lland_fluxes.NBes`
.. |NFk| replace:: :class:`~hydpy.models.lland.lland_derived.NFk`
.. |NHRU| replace:: :class:`~hydpy.models.lland.lland_control.NHRU`
.. |NKor| replace:: :class:`~hydpy.models.lland.lland_fluxes.NKor`
.. |NegQ| replace:: :class:`~hydpy.models.lland.lland_control.NegQ`
.. |NetRadiation| replace:: :class:`~hydpy.models.lland.lland_fluxes.NetRadiation`
.. |NetShortwaveRadiationInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.NetShortwaveRadiationInz`
.. |NmbLogEntries| replace:: :class:`~hydpy.models.lland.lland_derived.NmbLogEntries`
.. |OBSTB| replace:: :const:`~hydpy.models.lland.lland_constants.OBSTB`
.. |P1Strahl| replace:: :class:`~hydpy.models.lland.lland_control.P1Strahl`
.. |P2Strahl| replace:: :class:`~hydpy.models.lland.lland_control.P2Strahl`
.. |PET| replace:: :class:`~hydpy.models.lland.lland_inputs.PET`
.. |PWMax| replace:: :class:`~hydpy.models.lland.lland_control.PWMax`
.. |PWP| replace:: :class:`~hydpy.models.lland.lland_control.PWP`
.. |PY| replace:: :class:`~hydpy.models.lland.lland_control.PY`
.. |ParameterComplete| replace:: :class:`~hydpy.models.lland.lland_parameters.ParameterComplete`
.. |ParameterLand| replace:: :class:`~hydpy.models.lland.lland_parameters.ParameterLand`
.. |ParameterSoilThreshold| replace:: :class:`~hydpy.models.lland.lland_parameters.ParameterSoilThreshold`
.. |ParameterSoil| replace:: :class:`~hydpy.models.lland.lland_parameters.ParameterSoil`
.. |Parameter| replace:: :class:`~hydpy.core.parametertools.Parameter`
.. |PegasusESnow| replace:: :class:`~hydpy.models.lland.lland_model.PegasusESnow`
.. |PegasusTempSSurface| replace:: :class:`~hydpy.models.lland.lland_model.PegasusTempSSurface`
.. |PossibleSunshineDuration| replace:: :class:`~hydpy.models.lland.lland_fluxes.PossibleSunshineDuration`
.. |QBB| replace:: :class:`~hydpy.models.lland.lland_fluxes.QBB`
.. |QBGAMax| replace:: :class:`~hydpy.models.lland.lland_derived.QBGAMax`
.. |QBGA| replace:: :class:`~hydpy.models.lland.lland_states.QBGA`
.. |QBGZ| replace:: :class:`~hydpy.models.lland.lland_states.QBGZ`
.. |QDB| replace:: :class:`~hydpy.models.lland.lland_fluxes.QDB`
.. |QDGA1| replace:: :class:`~hydpy.models.lland.lland_states.QDGA1`
.. |QDGA2| replace:: :class:`~hydpy.models.lland.lland_states.QDGA2`
.. |QDGZ1| replace:: :class:`~hydpy.models.lland.lland_states.QDGZ1`
.. |QDGZ| replace:: :class:`~hydpy.models.lland.lland_fluxes.QDGZ`
.. |QFactor| replace:: :class:`~hydpy.models.lland.lland_derived.QFactor`
.. |QIB1| replace:: :class:`~hydpy.models.lland.lland_fluxes.QIB1`
.. |QIB2| replace:: :class:`~hydpy.models.lland.lland_fluxes.QIB2`
.. |QIGA1| replace:: :class:`~hydpy.models.lland.lland_states.QIGA1`
.. |QIGA2| replace:: :class:`~hydpy.models.lland.lland_states.QIGA2`
.. |QKap| replace:: :class:`~hydpy.models.lland.lland_fluxes.QKap`
.. |QZH| replace:: :class:`~hydpy.models.lland.lland_fluxes.QZH`
.. |RBeta| replace:: :class:`~hydpy.models.lland.lland_control.RBeta`
.. |RSchmelz| replace:: :class:`~hydpy.models.lland.lland_fixed.RSchmelz`
.. |Return_AdjustedWindSpeed_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_AdjustedWindSpeed_V1`
.. |Return_BackwardEulerError_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_BackwardEulerError_V1`
.. |Return_DailyGlobalRadiation_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_DailyGlobalRadiation_V1`
.. |Return_EnergyGainSnowSurface_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_EnergyGainSnowSurface_V1`
.. |Return_NetLongwaveRadiationSnow_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_NetLongwaveRadiationSnow_V1`
.. |Return_PenmanMonteith_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_PenmanMonteith_V1`
.. |Return_Penman_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_Penman_V1`
.. |Return_SaturationVapourPressure_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_SaturationVapourPressure_V1`
.. |Return_TempSSurface_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_TempSSurface_V1`
.. |Return_TempS_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_TempS_V1`
.. |Return_WG_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_WG_V1`
.. |Return_WLatSnow_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_WLatSnow_V1`
.. |Return_WSensSnow_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_WSensSnow_V1`
.. |Return_WSurfInz_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_WSurfInz_V1`
.. |Return_WSurf_V1| replace:: :class:`~hydpy.models.lland.lland_model.Return_WSurf_V1`
.. |SBes| replace:: :class:`~hydpy.models.lland.lland_fluxes.SBes`
.. |SEE| replace:: :const:`~hydpy.models.lland.lland_constants.SEE`
.. |SIED_D| replace:: :const:`~hydpy.models.lland.lland_constants.SIED_D`
.. |SIED_L| replace:: :const:`~hydpy.models.lland.lland_constants.SIED_L`
.. |SInz| replace:: :class:`~hydpy.models.lland.lland_states.SInz`
.. |SNRatio| replace:: :class:`~hydpy.models.lland.lland_aides.SNRatio`
.. |SP| replace:: :class:`~hydpy.models.lland.lland_fluxes.SP`
.. |SaturationVapourPressureInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.SaturationVapourPressureInz`
.. |SaturationVapourPressureSnow| replace:: :class:`~hydpy.models.lland.lland_fluxes.SaturationVapourPressureSnow`
.. |SaturationVapourPressure| replace:: :class:`~hydpy.models.lland.lland_fluxes.SaturationVapourPressure`
.. |SchmPot| replace:: :class:`~hydpy.models.lland.lland_fluxes.SchmPot`
.. |SoilSurfaceResistance| replace:: :class:`~hydpy.models.lland.lland_fluxes.SoilSurfaceResistance`
.. |State1DSequence| replace:: :class:`~hydpy.models.lland.lland_sequences.State1DSequence`
.. |SunshineDuration| replace:: :class:`~hydpy.models.lland.lland_inputs.SunshineDuration`
.. |TGr| replace:: :class:`~hydpy.models.lland.lland_control.TGr`
.. |TInd| replace:: :class:`~hydpy.models.lland.lland_control.TInd`
.. |TKor| replace:: :class:`~hydpy.models.lland.lland_fluxes.TKor`
.. |TRefN| replace:: :class:`~hydpy.models.lland.lland_control.TRefN`
.. |TZ| replace:: :class:`~hydpy.models.lland.lland_fluxes.TZ`
.. |TauS| replace:: :class:`~hydpy.models.lland.lland_states.TauS`
.. |TempSInz| replace:: :class:`~hydpy.models.lland.lland_aides.TempSInz`
.. |TempSSurface| replace:: :class:`~hydpy.models.lland.lland_fluxes.TempSSurface`
.. |TempS| replace:: :class:`~hydpy.models.lland.lland_aides.TempS`
.. |True| replace:: :const:`True`
.. |Turb0| replace:: :class:`~hydpy.models.lland.lland_control.Turb0`
.. |Update_ESnow_V1| replace:: :class:`~hydpy.models.lland.lland_model.Update_ESnow_V1`
.. |Update_QDGZ_QBGZ_QBGA_V1| replace:: :class:`~hydpy.models.lland.lland_model.Update_QDGZ_QBGZ_QBGA_V1`
.. |Update_QDGZ_QBGZ_QBGA_V2| replace:: :class:`~hydpy.models.lland.lland_model.Update_QDGZ_QBGZ_QBGA_V2`
.. |Update_WaDa_WAeS_V1| replace:: :class:`~hydpy.models.lland.lland_model.Update_WaDa_WAeS_V1`
.. |VERS| replace:: :const:`~hydpy.models.lland.lland_constants.VERS`
.. |VolBMax| replace:: :class:`~hydpy.models.lland.lland_control.VolBMax`
.. |WASSER| replace:: :const:`~hydpy.models.lland.lland_constants.WASSER`
.. |WATS| replace:: :class:`~hydpy.models.lland.lland_states.WATS`
.. |WAeS| replace:: :class:`~hydpy.models.lland.lland_states.WAeS`
.. |WEINB| replace:: :const:`~hydpy.models.lland.lland_constants.WEINB`
.. |WET0| replace:: :class:`~hydpy.models.lland.lland_logs.WET0`
.. |WG2Z| replace:: :class:`~hydpy.models.lland.lland_control.WG2Z`
.. |WGTF| replace:: :class:`~hydpy.models.lland.lland_fluxes.WGTF`
.. |WG| replace:: :class:`~hydpy.models.lland.lland_fluxes.WG`
.. |WLatSnow| replace:: :class:`~hydpy.models.lland.lland_fluxes.WLatSnow`
.. |WMax| replace:: :class:`~hydpy.models.lland.lland_control.WMax`
.. |WSensSnow| replace:: :class:`~hydpy.models.lland.lland_fluxes.WSensSnow`
.. |WSurfInz| replace:: :class:`~hydpy.models.lland.lland_fluxes.WSurfInz`
.. |WSurf| replace:: :class:`~hydpy.models.lland.lland_fluxes.WSurf`
.. |WaDa| replace:: :class:`~hydpy.models.lland.lland_fluxes.WaDa`
.. |WfET0| replace:: :class:`~hydpy.models.lland.lland_control.WfET0`
.. |hland| replace:: :mod:`~hydpy.models.hland`
.. |lland_v3| replace:: :mod:`~hydpy.models.lland_v3`
.. |lland| replace:: :mod:`~hydpy.models.lland`
.. |parametertools| replace:: :mod:`~hydpy.core.parametertools`
.. |pub| replace:: :mod:`~hydpy.pub`
.. |hland_parameters.ParameterComplete| replace:: :class:`~hydpy.models.hland.hland_parameters.ParameterComplete`
.. |hland_states.Ic| replace:: :class:`~hydpy.models.hland.hland_states.Ic`
.. |lland_fluxes.QAH| replace:: :class:`~hydpy.models.lland.lland_fluxes.QAH`
.. |lland_parameters.ParameterComplete| replace:: :class:`~hydpy.models.lland.lland_parameters.ParameterComplete`
.. |numpy.inf| replace:: :const:`~numpy.inf`
.. |numpy.nan| replace:: :const:`~numpy.nan`

.. _lland:

lland
=====

.. automodule:: hydpy.models.lland
    :members:
    :show-inheritance:
    :exclude-members: CLASSES, RUN_METHODS, ADD_METHODS, INLET_METHODS, OUTLET_METHODS, RECEIVER_METHODS, SENDER_METHODS, PART_ODE_METHODS, FULL_ODE_METHODS, CONTROLPARAMETERS, DERIVEDPARAMETERS, FIXEDPARAMETERS, REQUIREDSEQUENCES, UPDATEDSEQUENCES, RESULTSEQUENCES, SOLVERPARAMETERS, SOLVERSEQUENCES, SUBMETHODS, SUBMODELS, fastaccess, fastaccess_new, fastaccess_old, pars, seqs, ReceiverSequences, SenderSequences
